--- a/kapitel5.tex
+++ b/kapitel5.tex
@@ -11,22 +11,22 @@ Infrastructure-as-Code is the perfect tool to enforce regulatory compliance and 
 
 Terraform provides the declarative definition for the infrastructure and Rancher, through templates and access control, the necessary controls for the installation and configuration of Kubernetes itself.
 
-The Center of Internet Security offers benchmarks, to test Kubernetes cluster against. Rancher has CIS Scans integrated and offers the ability to mitigate the findings.
+The Center of Internet Security offers benchmarks to test Kubernetes cluster against. Rancher has CIS Scans integrated and provides the ability to mitigate the findings.
 
-We were able to show that the combination of Terraform together with Rancher templates provides an ideal solution for Enterprise IT to provision a secure and compliant container run-time environment and manage the infrastructure life cycle. By having all infrastructure well defined and under revision control, and all infrastructure deployments automated, GRC controls can be applied easilly. 
+We were able to show that the combination of Terraform, together with Rancher templates, provides an ideal solution for Enterprise IT to provision a secure and compliant container run-time environment and manage the infrastructure life cycle. By having all infrastructure well defined and under revision control and all infrastructure deployments automated, you can easily apply GRC controls. 
 
-There are alternatives to this combination. Platform-native solutions for the major hyperscale platforms do exist, for example ARM templates on Microsoft Azure or Cloud Formation on Amazon Web Services. Also, the leading on-premise virtualization platforms, VMware and Hyper-V, each have a native orchestration solution as well.
+There are alternatives to this combination. Platform-native solutions for the major hyperscale platforms do exist, for example, ARM templates on Microsoft Azure or Cloud Formation on Amazon Web Services. Also, the leading on-premise virtualization platforms, VMware and Hyper-V, each have a native orchestration solution.
 
 Rancher and Terraform, however, are an open-source and provider-independent
-option and thus the recommended choice; both tools have been around for a couple of years and amassed a large and largely loyal user base.
+option and thus the recommended choice; both tools have been around for a couple of years and amassed a large and mostly loyal user base.
 
-There are other open-source tools, such as the very recently released CDK8S by Amazon Web Services, but in my opinion Rancher and Terraform remain the most comprehensive option and are ideally suited for cloud computing.
+There are other open-source tools, such as the very recently released CDK8S by Amazon Web Services. In my opinion, Rancher and Terraform are the most comprehensive and are ideally suited for cloud computing.
 
-Infrastructure automation is by no means a new invention. Procedural tools like Ansible, Chef or Operations Orchestration have been around for decades.
+Infrastructure automation is by no means a new invention. Procedural tools like Ansible, Chef, or Operations Orchestration have been around for decades.
 
-New developments in the area of serverless computing threaten compute infrastructure as a distinct category itself and might obliterate the need for secure and compliant orchestration tools, though.
+New developments in the area of serverless computing threaten computing infrastructure as a distinct category itself and might obliterate the need for secure and compliant orchestration tools, though.
 
-Regardless of future developments, governance, risk management and regulatory compliance will remain a key topic in Enterprise IT.
+Regardless of future developments, governance, risk management, and regulatory compliance will remain a key topic in Enterprise IT.
 
 You can find all example plan files on my  \href{https://github.com/chfrank-cgn/Rancher/tree/master/az-cluster-1}{GitHub}.
 
