--- a/erklaerung.tex
+++ b/erklaerung.tex
@@ -14,7 +14,7 @@
 
 \par\medskip
 
-I, with this, declare that I produced the submitted paper with no assistance from any other party and without the use of any unauthorized aids and, in particular, that I have marked as quotations all passages which are reproduced verbatim or near-verbatim from publications. Also, I declare that the submitted print version of this thesis is identical to its digital version. Further, I say that this thesis has never been introduced before to any examination board in either its present form or in any other similar version. I herewith agree that this thesis may be published. I herewith consent that this thesis may be uploaded to the server of external contractors to submit it to the contractors’ plagiarism detection systems. Uploading this thesis to send it to plagiarism detection systems is not a form of publication.
+I, with this, declare that I produced the submitted paper with no assistance from any other party and without the use of any unauthorized aids and, in particular, that I have marked as quotations all passages which are reproduced verbatim or near-verbatim from publications. Also, I declare that the submitted print version of this thesis is identical to its digital version. Further, I say that this thesis has never been introduced to any examination board in either its present form or in any other similar version. I herewith agree that this thesis may be published. I herewith consent that this thesis may be uploaded to the server of external contractors to submit it to the contractors’ plagiarism detection systems. Uploading this thesis to send it to plagiarism detection systems is not a form of publication.
 
 \par\medskip
 \par\medskip
